--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -91,6 +91,7 @@ BITCOIN_TESTS = \
   liblelantus/test/serialize_test.cpp \
   liblelantus/test/sigma_extended_test.cpp \
   liblelantus/test/hierarchical_test.cpp \
+  liblelantus/test/one_of_many_test.cpp \
   sigma/test/coin_spend_tests.cpp \
   sigma/test/coin_tests.cpp \
   sigma/test/primitives_tests.cpp \
