--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -94,6 +94,7 @@ BITCOIN_TESTS = \
   libspark/test/schnorr_test.cpp \
   libspark/test/chaum_test.cpp \
   libspark/test/bpplus_test.cpp \
+  libspark/test/grootle_test.cpp \
   sigma/test/coin_spend_tests.cpp \
   sigma/test/coin_tests.cpp \
   sigma/test/primitives_tests.cpp \
