--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -661,7 +661,10 @@ libspark_a_SOURCES = \
   libspark/mint_transaction.h \
   libspark/mint_transaction.cpp \
   libspark/spend_transaction.h \
-  libspark/spend_transaction.cpp
+  libspark/spend_transaction.cpp \
+  libspark/concise_grootle_proof.h \
+  libspark/concise_grootle.h \
+  libspark/concise_grootle.cpp
 
 liblelantus_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
 liblelantus_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
