Created libaura Moved sigma

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -114,6 +114,7 @@ LIBBITCOIN_CONSENSUS=libbitcoin_consensus.a
 LIBBITCOIN_CLI=libbitcoin_cli.a
 LIBBITCOIN_UTIL=libbitcoin_util.a
 LIBLELANTUS=liblelantus.a
+LIBAURA=libaura.a
 LIBBITCOIN_CRYPTO=crypto/libbitcoin_crypto.a
 LIBBITCOINQT=qt/libfiroqt.a
 LIBSECP256K1=secp256k1/libsecp256k1.la
@@ -145,7 +146,8 @@ EXTRA_LIBRARIES += \
   $(LIBBITCOIN_WALLET) \
   $(LIBBITCOIN_ZMQ) \
   $(LIBFIRO_SIGMA) \
-  $(LIBLELANTUS)
+  $(LIBLELANTUS) \
+  $(LIBAURA)
 
 lib_LTLIBRARIES = $(LIBBITCOINCONSENSUS)
 
@@ -750,6 +752,24 @@ libsigma_a_SOURCES = \
   sigma/params.cpp \
   sigma/openssl_context.h
 
+libaura_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) -Werror
+libaura_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) -Werror
+libaura_a_SOURCES = \
+  libaura/r1_proof.h \
+  libaura/r1_proof_generator.h \
+  libaura/r1_proof_generator.hpp \
+  libaura/r1_proof_verifier.h \
+  libaura/r1_proof_verifier.hpp \
+  libaura/sigmaplus_proof.h \
+  libaura/sigmaplus_prover.h \
+  libaura/sigmaplus_prover.hpp \
+  libaura/sigmaplus_verifier.h \
+  libaura/sigmaplus_verifier.hpp \
+  libaura/sigma_primitives.h \
+  libaura/sigma_primitives.hpp \
+  libaura/params.h\
+  libaura/params.cpp
+  
 if GLIBC_BACK_COMPAT
 libbitcoin_util_a_SOURCES += compat/glibc_compat.cpp
 AM_LDFLAGS += $(COMPAT_LDFLAGS)
@@ -789,6 +809,7 @@ firod_LDADD = \
   $(LIBBITCOIN_WALLET) \
   $(LIBFIRO_SIGMA) \
   $(LIBLELANTUS) \
+  $(LIBAURA) \
   $(LIBBITCOIN_ZMQ) \
   $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_CRYPTO) \
